<resources>
    <string name="app_name" translatable="false">SaveGoals</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!-- Dialogs -->
    <string name="date_dialog_title">Error de Fecha</string>
    <string name="date_dialog_message">La fecha es posterior a la fecha de finalizacion del objetivo. Quieres continuar?</string>
    <string name="date_anterior_dialog_message">La fecha es anterior a la fecha actual. Quieres continuar?</string>
    <string name="date_dialog_ok">Si</string>
    <string name="date_dialog_cancel">No</string>

    <!-- Errores -->
    <string name="necesario">Campo necesario</string>
    <string name="largo">El campo es demasiado largo. Menos de 30 caracteres</string>
    <string name="solo_letras">Solo letras</string>
    <string name="error_misma_fecha">La fecha no puede ser la actual</string>
    <string name="error_fecha_anterior">La fecha no puede ser anterior a la actual</string>
    <string name="numero_negativo">No puede ser un número negativo</string>
    <string name="solo_numero">Solo números</string>
    <string name="numero_grande">El número es muy grande</string>
    <string name="cantidad_menor">La cantidad a ahorrar tiene que ser mayor a la cantidad ahorrada</string>

    <!-- Textos -->
    <string name="fecha">"Fecha: "</string>
    <string name="restar">Restar</string>
    <string name="calculadora_text">"El objetivo se cumplirá el "</string>
    <string name="error_estadisticas_obj">Las entradas de este objetivo son negativas</string>
    <string name="error_est_aho">NO HAY NADA AHORRADO EN LOS OBJETIVOS</string>
    <string name="error_est_obj">NO HAY OBJETIVOS</string>

    <!-- Layouts -->
    <string name="resumen">RESUMEN</string>
    <string name="estadisticas">ESTADÍSTICAS</string>
    <string name="entradas">ENTRADAS</string>
    <string name="entrada_nombre">Nombre de la Entrada</string>
    <string name="objetivo_nombre">Nombre de Objetivo</string>
    <string name="seleccionar_cat">Seleccione una categoría</string>
    <string name="fecha_et">Fecha</string>
    <string name="cantidad_et">Cantidad</string>
    <string name="cancelar">Cancelar</string>
    <string name="add_entrada">Añadir Entrada</string>
    <string name="add_objetivo">Crear Objetivo</string>
    <string name="restarSw">Restar Cantidad</string>
    <string name="edit_entrada">Editar Entrada</string>
    <string name="edit_objetivo">Editar Objetivo</string>
    <string name="modo_noche">Modo noche</string>
    <string name="no_entardas">No hay entradas en este objetivo</string>
    <string name="ultimas_entradas">Últimas entradas:</string>
    <string name="ahorrado">AHORRADO</string>
    <string name="pendiente">PENDIENTE</string>
    <string name="total">TOTAL</string>
    <string name="ahorro_nec">AHORRO NECESARIO</string>
    <string name="dia">DIA</string>
    <string name="semana">SEMANA</string>
    <string name="mes">MES</string>
    <string name="objetivos">OBJETIVOS</string>
    <string name="objetivos_emoji">OBJETIVOS 🎯</string>
    <string name="cumplidos_emoji">CUMPLIDOS 🏆</string>
    <string name="fecha_pasada_emoji">FECHA PASADA ⏳</string>
    <string name="archivado_emoji">ARCHIVADOS 📁</string>
    <string name="calculadora_title">Calculadora de fecha</string>
    <string name="calculadora_message">Introduce la cantidad que quieres ahorrar y la cantidad que ahorras y cada cuantos días</string>
    <string name="calculadora_ahorrar">Cantidad a ahorrar</string>
    <string name="calculadora_dias">Cada cuantos días</string>
    <string name="calcualdora_cantidad">Cantidad ahorrado</string>
    <string name="calculadora_cantidad_inical">Cantidad inicial</string>
    <string name="btn_calcular">Calcular</string>
    <string name="text_crear_calc">Quieres crear un objetivo con esta fecha y esta cantidad?</string>
    <string name="tab_evolucion">EVOLUCIÓN</string>
    <string name="tab_ahorros">AHORROS</string>
    <string name="tab_grafico">GRÁFICO</string>
    <string name="error_pieChart_est_obj">NO HAY OBJETIVOS</string>
    <string name="txt_est_obj">Cantidad total en objetivos:</string>
    <string name="txt_est_aho">Cantidad total ahorrada en objetivos:</string>
    <string name="error_pieChartEn_est_obj">NO HAY ENTRADAS</string>
    <string name="txt_en_est_aho">Cantidad total ahorrada por entradas:</string>
    <string name="entardas_minus">Entradas</string>
    <string name="nombre_minus">Nombre</string>
    <string name="categoria_minus">Categoría</string>
    <string name="todos_minus">Todos</string>
    <string name="objetivos_minus">Objetivos</string>
    <string name="txt_est_graf">Gráfico de últimos 15 días</string>
    <string name="hoy">HOY</string>

    <!-- Menu -->
    <string name="menu_objetivos">Objetivos</string>
    <string name="menu_estadisticas">Estadisticas</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="menu_añadir_obj">Añadir Objetivo</string>
    <string name="eliminar">Eliminar</string>
    <string name="retirar">Retirar</string>
    <string name="editar">Editar</string>

    <!-- Categorias -->
    <string name="categoria_viaje">Viaje</string>
    <string name="categoria_ahorrar">Ahorrar</string>
    <string name="categoria_regalo">Regalo</string>
    <string name="categoria_compras">Compras</string>
    <string name="categoria_clase">Clase</string>
    <string name="categoria_juego">Juego</string>
    <string name="categoria_otros">Otros</string>
    <string name="categoria_seleccionar">Seleccionar</string>
    <string name="categoria_cartera">Cartera</string>
    <string name="categoria_hucha">Hucha</string>
    <string name="categoria_trabajo">Trabajo</string>

    <!-- Notificaciones -->
    <string name="hora_1" translatable="false">17:00</string>
    <string name="hora_2" translatable="false">18:00</string>
    <string name="hora_3" translatable="false">19:00</string>
    <string name="hora_4" translatable="false">20:00</string>
    <string name="hora_5" translatable="false">21:00</string>
    <string name="hora_6" translatable="false">22:00</string>
    <string name="hora_7" translatable="false">23:00</string>
    <string name="seleccionar_hora">Selecciona la hora</string>
    <string name="btn_guardar">Guardar</string>
    <string name="act_noti">Activar notificaciones</string>

    <!-- Widgets -->
    <string name="widget_config_text">Seleccionar el objetivo</string>
    <string name="widget_config_select_obj">Seleccionar objetivo</string>
    <string name="widget_config_text2">No hay ningún objetivo sin cumplir</string>
    <string name="widget_config_text3">No hay dos objetivos o más sin cumplir</string>
    <string name="salir">Salir</string>
    <string name="widget_emoticono_sin_nada">⛔</string>
    <string name="widget_texto_sin_nada">Ha habido un error con el objetivo</string>
    <string name="widget_texto_sin_nada_plural">Ha habido un error con los objetivos</string>
    <string name="widget_texto_sin_nada_2">Elimina el widget y vuelve a añadirlo</string>

    <!-- Configuracion -->
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="cuenta">CUENTA</string>
    <string name="configuracion">CONFIGURACIÓN</string>
    <string name="creditos">CRÉDITOS</string>
    <string name="google_is">Google</string>
    <string name="cuenta_is">Correo Electrónico</string>
    <string name="pass_is">Contraseña</string>
    <string name="pass_is_rep">Repetir la contraseña</string>
    <string name="title_is_correo">Inicio de sesión con correo electrónico</string>
    <string name="registrar">No tienes cuenta? Registrate</string>
    <string name="registrarse">Registrarse</string>
    <string name="title_is_registro">Registro con correo electrónico</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="error_IS">Error al Iniciar Sesión</string>
    <string name="eliminar_cuenta">Eliminar Cuenta</string>
    <string name="text_toast_eliminar_cuenta">Cuenta Eliminada</string>
    <string name="dialog_message_eliminar_cuenta">Estas seguro de que quieres eliminar tu cuenta?</string>
    <string name="error_eliminar_cuenta">Error al eliminar la cuenta</string>
    <string name="default_web_client_id" translatable="false">553932914908-n602kusf9l5djnj3i02g7qkh19jqosb2.apps.googleusercontent.com</string>
    <string name="respaldo">Respaldo</string>
    <string name="copia_de_seguridad">COPIA DE SEGURIDAD</string>
    <string name="recuperar_copia">RESTAURAR ÚLTIMA COPIA</string>
    <string name="copia_restautar_titl">COPIA / RESTAURAR</string>
    <string name="ultima_cop_seg">Última copia de seguridad: Hace&#160;</string>
    <string name="mes_cop_seg">&#160;mes</string>
    <string name="meses_cop_seg">&#160;meses</string>
    <string name="dia_cop_seg">&#160;día</string>
    <string name="dias_cop_seg">&#160;días</string>
    <string name="hora_cop_seg">&#160;hora</string>
    <string name="horas_cop_seg">&#160;horas</string>
    <string name="minuto_cop_seg">&#160;minuto</string>
    <string name="minutos_cop_seg">&#160;minutos</string>
    <string name="y_cop_seg">&#160;y&#160;</string>
    <string name="no_hay_copias">No hay copias de seguridad</string>
    <string name="copia_restaurada">Copia restaurada</string>
    <string name="cuenta_minuscula">Cuenta</string>
    <string name="contrasenas_no_coinciden">Las contraseñas no coinciden</string>
    <string name="restaurar_copia">Estás seguro de que quieres restaurar la última copia de seguridad? Se eliminará todo lo hecho después de la última copia.</string>
    <string name="restaurar_copia_titulo">Restaurar copia</string>
    <string name="cerrar_sesion_dialog">Estás seguro de que quieres cerrar sesión?</string>
    <string name="eliminar_disp_dialog">Quieres eliminarán también del dispositivo los objetivos.</string>
    <string name="eliminar_disp_dialog_title">Eliminar del dispositivo</string>
    <string name="correo_olvidado_ok">Correo enviado</string>
    <string name="correo_olvidado_ko">Error al mandar correo</string>
    <string name="correo_olvidado">Has olvidado la contraseña? Haz click aquí</string>
    <string name="creditos_text">Créditos</string>
    <string name="error_creditos">No hay créditos</string>

    <!-- Archivar -->
    <string name="archivar_title">Archivados</string>
    <string name="select_title">Seleccionar</string>
    <string name="cancelar_title">Cancelar</string>

    <!-- Shortcuts -->
    <string name="shortcut1_texto_corto">Agregar nuevo Objetivo</string>
    <string name="shortcut1_texto_error">Error al iniciar el shortcut</string>
</resources>