<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddEntradasActivity">

    <EditText
        android:id="@+id/etNombreEntradas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/entrada_nombre"
        android:inputType="text"
        android:minHeight="48dp" />

    <Spinner
        android:id="@+id/spinnerCategoriaEntradas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvErrorCategoriaEntradas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/seleccionar_cat"
        android:textColor="#FF0000"
        android:textStyle="bold"
        android:visibility="gone" />

    <EditText
        android:id="@+id/etFechaEntradas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/fecha_et"
        android:inputType="date"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/tvErrorFechaEntradas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="#FF0000"
        android:textStyle="bold"
        android:visibility="gone" />

    <EditText
        android:id="@+id/etCantidadEntradas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/cantidad_et"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnVolverEntradas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/cancelar" />

        <Button
            android:id="@+id/btnAddEntradas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/add_entrada" />
    </LinearLayout>

</LinearLayout>