<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controlador.inicioSesion.CorreoInicioSesionActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAtrasIs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:src="@drawable/deshacer"
        app:backgroundTint="@color/rojo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTituloIS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:text="@string/title_is_correo"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEmailIS"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10sp"
            android:ems="10"
            android:hint="@string/cuenta_is"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etPassIS"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="10sp"
            android:ems="10"
            android:hint="@string/pass_is"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/etPassIS2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="10sp"
            android:ems="10"
            android:hint="@string/pass_is_rep"
            android:inputType="textPassword"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnIniciarSesionIS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:text="@string/iniciar_sesion" />

        <TextView
            android:id="@+id/tvOlvidarPassIS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="10sp"
            android:text="Has olvidado la contraseña? Haz click aquí"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvRegistroIS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="10sp"
            android:text="@string/registrar"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>