<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controlador.menu.EstadisticasFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayoutEst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabEstEvolucion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_evolucion" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabEstObjetivos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/objetivos" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabEstAhorros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_ahorros" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPagerEst"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</FrameLayout>