<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabResumen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resumen" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabEstadisticas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estadisticas" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabEntradas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entradas" />
    </com.google.android.material.tabs.TabLayout>
    
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>