<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controlador.estObjetivos.EstGraficoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lyEditEstGraf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:visibility="gone">


            <RadioGroup
                android:id="@+id/rgEstGrafico"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbTodosEstGraf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/todos_minus" />

                <RadioButton
                    android:id="@+id/rbObjEstGraf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/objetivos_minus" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/tvErrorLineChartEstGrafico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/error_pieChart_est_obj"
            android:textColor="#FF0000"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvTitleEstGrafico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/txt_est_graf"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/linechartEstGrafico"
            android:layout_width="match_parent"
            android:layout_height="300sp"
            android:layout_marginTop="25dp" />

    </LinearLayout>
</FrameLayout>